
Version 0.2
-----------

- Display error if update info couldn't be retrieved while manually checking
  for updates.
- WinSparkle window is now resizable only when showing release notes.


Version 0.1.1
-------------

- Fixed Sparkle namespace in appcast parser; it now looks for the correct
  `http://www.andymatuschak.org/xml-namespaces/sparkle` value. Appcasts
  using the incorrect `http://www.andymatuschak.org/xml-namespaces`
  URI must be updated.


Version 0.1
-----------

- Initial release.